[package]
name = "api-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-web-actors = "4.2"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
moka = { version = "0.12", features = ["future"] }
lazy_static = "1.4"
prometheus = "0.13"
regex = "1.9"